[gd_scene load_steps=18 format=2]

[ext_resource path="res://Santa Claus/NP/Level 1/SantaClause1.gd" type="Script" id=1]
[ext_resource path="res://Santa Claus/NP/Test/Gifts.gd" type="Script" id=2]
[ext_resource path="res://Santa Claus/Sprites/gift3.png" type="Texture" id=3]
[ext_resource path="res://Santa Claus/Sprites/gift7.png" type="Texture" id=4]
[ext_resource path="res://Santa Claus/Sprites/pipe.png" type="Texture" id=5]
[ext_resource path="res://Santa Claus/Sprites/gift2.png" type="Texture" id=6]
[ext_resource path="res://Santa Claus/NP/Test/ChildDisplay.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Santa Claus/NP/Test/ReceiveButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Black Bricked TileMap.tscn" type="PackedScene" id=10]
[ext_resource path="res://Santa Claus/NP/Test/GiftSlot.tscn" type="PackedScene" id=11]
[ext_resource path="res://Santa Claus/NP/Test/Gift.tscn" type="PackedScene" id=12]
[ext_resource path="res://Door.tscn" type="PackedScene" id=13]
[ext_resource path="res://Santa Claus/NP/Test/SantaClause.tscn" type="PackedScene" id=14]
[ext_resource path="res://Santa Claus/NP/Test/SendButton.tscn" type="PackedScene" id=15]
[ext_resource path="res://Santa Claus/NP/Level 1/SantaClausPuzzle1.gd" type="Script" id=16]
[ext_resource path="res://Santa Claus/NP/Test/GiftSlots.gd" type="Script" id=17]

[node name="Level" type="Node2D"]
position = Vector2( 14.042, 0 )
script = ExtResource( 16 )

[node name="Black Bricked TileMap" parent="." instance=ExtResource( 10 )]
position = Vector2( -46.042, 29 )
tile_data = PoolIntArray( -131068, 1, 0, -131067, 1, 1, -131066, 1, 1, -131065, 1, 1, -131064, 1, 1, -131063, 1, 1, -131062, 1, 1, -131061, 1, 1, -131060, 1, 1, -131059, 1, 1, -131058, 1, 1, -131057, 1, 1, -131056, 1, 1, -131055, 1, 1, -131054, 1, 1, -131053, 1, 1, -131052, 1, 1, -131051, 1, 1, -131050, 1, 1, -131049, 1, 1, -131048, 1, 1, -131047, 1, 1, -131046, 1, 1, -131045, 1, 1, -131044, 1, 1, -131043, 1, 1, -131042, 1, 1, -131041, 1, 1, -131040, 1, 1, -131039, 1, 1, -131038, 1, 1, -131037, 1, 1, -131036, 1, 1, -131035, 1, 1, -131034, 1, 1, -131033, 1, 1, -131032, 1, 1, -131031, 1, 1, -131030, 1, 1, -131029, 1, 1, -131028, 1, 1, -131027, 1, 1, -131026, 1, 1, -131025, 1, 1, -131024, 1, 1, -131023, 1, 1, -131022, 1, 1, -131021, 1, 1, -131020, 1, 1, -131019, 1, 2, -65532, 1, 65536, -65531, 1, 65537, -65530, 1, 65537, -65529, 1, 65537, -65528, 1, 65537, -65527, 1, 65537, -65526, 1, 65537, -65525, 1, 65537, -65524, 1, 65537, -65523, 1, 65537, -65522, 1, 65537, -65521, 1, 65537, -65520, 1, 65537, -65519, 1, 65537, -65518, 1, 65537, -65517, 1, 65537, -65516, 1, 65537, -65515, 1, 65537, -65514, 1, 65537, -65513, 1, 65537, -65512, 1, 65537, -65511, 1, 65537, -65510, 1, 65537, -65509, 1, 65537, -65508, 1, 65537, -65507, 1, 65537, -65506, 1, 65537, -65505, 1, 65537, -65504, 1, 65537, -65503, 1, 65537, -65502, 1, 65537, -65501, 1, 65537, -65500, 1, 65537, -65499, 1, 65537, -65498, 1, 65537, -65497, 1, 65537, -65496, 1, 65537, -65495, 1, 65537, -65494, 1, 65537, -65493, 1, 65537, -65492, 1, 65537, -65491, 1, 65537, -65490, 1, 65537, -65489, 1, 65537, -65488, 1, 65537, -65487, 1, 65537, -65486, 1, 65537, -65485, 1, 65537, -65484, 1, 65537, -65483, 1, 65538, 4, 1, 131072, 5, 1, 131073, 6, 1, 131073, 7, 1, 131073, 8, 1, 65542, 9, 1, 65541, 10, 1, 131073, 11, 1, 131073, 12, 1, 131073, 13, 1, 131073, 14, 1, 131073, 15, 1, 131073, 16, 1, 131073, 17, 1, 131073, 18, 1, 131073, 19, 1, 131073, 20, 1, 131073, 21, 1, 131073, 22, 1, 131073, 23, 1, 131073, 24, 1, 131073, 25, 1, 131073, 26, 1, 131073, 27, 1, 131073, 28, 1, 131073, 29, 1, 131073, 30, 1, 131073, 31, 1, 131073, 32, 1, 131073, 33, 1, 131073, 34, 1, 131073, 35, 1, 131073, 36, 1, 131073, 37, 1, 131073, 38, 1, 131073, 39, 1, 131073, 40, 1, 131073, 41, 1, 131073, 42, 1, 131073, 43, 1, 131073, 44, 1, 131073, 45, 1, 131073, 46, 1, 131073, 47, 1, 131073, 48, 1, 131073, 49, 1, 65542, 50, 1, 65537, 51, 1, 65541, 52, 1, 131073, 53, 1, 131074, 65544, 1, 65536, 65545, 1, 65538, 65585, 1, 65536, 65586, 1, 65537, 65587, 1, 65538, 131080, 1, 65536, 131081, 1, 65538, 131121, 1, 65536, 131122, 1, 65537, 131123, 1, 65538, 196616, 1, 65536, 196617, 1, 65538, 196657, 1, 65536, 196658, 1, 65537, 196659, 1, 65538, 262152, 1, 65536, 262153, 1, 65538, 262193, 1, 65536, 262194, 1, 65537, 262195, 1, 65538, 327688, 1, 65536, 327689, 1, 65538, 327729, 1, 65536, 327730, 1, 65537, 327731, 1, 65538, 393224, 1, 65536, 393225, 1, 65538, 393265, 1, 65536, 393266, 1, 65537, 393267, 1, 65538, 458760, 1, 131072, 458761, 1, 131074, 458801, 1, 131072, 458802, 1, 131073, 458803, 1, 131074, 786436, 1, 0, 786437, 1, 1, 786438, 1, 1, 786439, 1, 1, 786440, 1, 1, 786441, 1, 1, 786442, 1, 1, 786443, 1, 1, 786444, 1, 1, 786445, 1, 1, 786446, 1, 1, 786447, 1, 1, 786448, 1, 1, 786449, 1, 1, 786450, 1, 1, 786451, 1, 1, 786452, 1, 1, 786453, 1, 1, 786454, 1, 1, 786455, 1, 1, 786456, 1, 1, 786457, 1, 1, 786458, 1, 1, 786459, 1, 1, 786460, 1, 1, 786461, 1, 1, 786462, 1, 1, 786463, 1, 1, 786464, 1, 1, 786465, 1, 1, 786466, 1, 1, 786467, 1, 1, 786468, 1, 1, 786469, 1, 1, 786470, 1, 1, 786471, 1, 1, 786472, 1, 1, 786473, 1, 1, 786474, 1, 1, 786475, 1, 1, 786476, 1, 1, 786477, 1, 1, 786478, 1, 1, 786479, 1, 1, 786480, 1, 1, 786481, 1, 1, 786482, 1, 1, 786483, 1, 1, 786484, 1, 1, 786485, 1, 2, 851972, 1, 65536, 851973, 1, 65537, 851974, 1, 65537, 851975, 1, 65537, 851976, 1, 65537, 851977, 1, 65537, 851978, 1, 65537, 851979, 1, 65537, 851980, 1, 65537, 851981, 1, 65537, 851982, 1, 65537, 851983, 1, 65537, 851984, 1, 65537, 851985, 1, 65537, 851986, 1, 65537, 851987, 1, 65537, 851988, 1, 65537, 851989, 1, 65537, 851990, 1, 65537, 851991, 1, 65537, 851992, 1, 65537, 851993, 1, 65537, 851994, 1, 65537, 851995, 1, 65537, 851996, 1, 65537, 851997, 1, 65537, 851998, 1, 65537, 851999, 1, 65537, 852000, 1, 65537, 852001, 1, 65537, 852002, 1, 65537, 852003, 1, 65537, 852004, 1, 65537, 852005, 1, 65537, 852006, 1, 65537, 852007, 1, 65537, 852008, 1, 65537, 852009, 1, 65537, 852010, 1, 65537, 852011, 1, 65537, 852012, 1, 65537, 852013, 1, 65537, 852014, 1, 65537, 852015, 1, 65537, 852016, 1, 65537, 852017, 1, 65537, 852018, 1, 65537, 852019, 1, 65537, 852020, 1, 65537, 852021, 1, 65538, 917508, 1, 65536, 917509, 1, 65537, 917510, 1, 65537, 917511, 1, 65537, 917512, 1, 65537, 917513, 1, 65537, 917514, 1, 65537, 917515, 1, 65537, 917516, 1, 65537, 917517, 1, 65537, 917518, 1, 65537, 917519, 1, 65537, 917520, 1, 65537, 917521, 1, 65537, 917522, 1, 65537, 917523, 1, 65537, 917524, 1, 65537, 917525, 1, 65537, 917526, 1, 65537, 917527, 1, 65537, 917528, 1, 65537, 917529, 1, 65537, 917530, 1, 65537, 917531, 1, 65537, 917532, 1, 65537, 917533, 1, 65537, 917534, 1, 65537, 917535, 1, 65537, 917536, 1, 65537, 917537, 1, 65537, 917538, 1, 65537, 917539, 1, 65537, 917540, 1, 65537, 917541, 1, 65537, 917542, 1, 65537, 917543, 1, 65537, 917544, 1, 65537, 917545, 1, 65537, 917546, 1, 65537, 917547, 1, 65537, 917548, 1, 65537, 917549, 1, 65537, 917550, 1, 65537, 917551, 1, 65537, 917552, 1, 65537, 917553, 1, 65537, 917554, 1, 65537, 917555, 1, 65537, 917556, 1, 65537, 917557, 1, 65538, 983044, 1, 131072, 983045, 1, 131073, 983046, 1, 131073, 983047, 1, 131073, 983048, 1, 131073, 983049, 1, 131073, 983050, 1, 131073, 983051, 1, 131073, 983052, 1, 131073, 983053, 1, 131073, 983054, 1, 131073, 983055, 1, 131073, 983056, 1, 131073, 983057, 1, 131073, 983058, 1, 131073, 983059, 1, 131073, 983060, 1, 131073, 983061, 1, 131073, 983062, 1, 131073, 983063, 1, 131073, 983064, 1, 131073, 983065, 1, 131073, 983066, 1, 131073, 983067, 1, 131073, 983068, 1, 131073, 983069, 1, 131073, 983070, 1, 131073, 983071, 1, 131073, 983072, 1, 131073, 983073, 1, 131073, 983074, 1, 131073, 983075, 1, 131073, 983076, 1, 131073, 983077, 1, 131073, 983078, 1, 131073, 983079, 1, 131073, 983080, 1, 131073, 983081, 1, 131073, 983082, 1, 131073, 983083, 1, 131073, 983084, 1, 131073, 983085, 1, 131073, 983086, 1, 131073, 983087, 1, 131073, 983088, 1, 131073, 983089, 1, 131073, 983090, 1, 131073, 983091, 1, 131073, 983092, 1, 131073, 983093, 1, 131074 )

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 153.958, 205 )

[node name="SantaClaus" parent="." instance=ExtResource( 14 )]
position = Vector2( 216.958, 188 )
script = ExtResource( 1 )

[node name="DoorOut" parent="." instance=ExtResource( 13 )]
position = Vector2( 107.958, 189 )
scale = Vector2( -1, 1 )

[node name="DoorVerify" parent="." instance=ExtResource( 13 )]
position = Vector2( 742.958, 190 )
target_level_path = "res://Santa Claus/Verification/Level 1/SantaClausVFLevel1.tscn"

[node name="ReceiveButton" parent="." instance=ExtResource( 9 )]
position = Vector2( 684.958, 202 )

[node name="SendButton" parent="." instance=ExtResource( 15 )]
position = Vector2( 653.958, 202 )

[node name="ChildDisplay" parent="." instance=ExtResource( 7 )]
position = Vector2( 509.958, 168 )

[node name="Gifts" type="Node2D" parent="."]
position = Vector2( -112, 0 )
script = ExtResource( 2 )

[node name="Gift1" parent="Gifts" instance=ExtResource( 12 )]
position = Vector2( 446.958, 209 )
texture = ExtResource( 4 )
gift_index = 0
gift_values = [ 23, 2 ]

[node name="Gift2" parent="Gifts" instance=ExtResource( 12 )]
position = Vector2( 487.958, 206 )
sprite = ExtResource( 6 )
gift_index = 1
gift_values = [ 1, 42 ]

[node name="Gift3" parent="Gifts" instance=ExtResource( 12 )]
position = Vector2( 528.958, 208 )
sprite = ExtResource( 3 )
gift_index = 2
gift_values = [ 6, 5 ]

[node name="GiftSlots" type="Node2D" parent="."]
position = Vector2( -112, 0 )
script = ExtResource( 17 )

[node name="GiftSlot1" parent="GiftSlots" instance=ExtResource( 11 )]
position = Vector2( 446.958, 209 )
gift_path = NodePath("../../Gifts/Gift1")

[node name="GiftSlot2" parent="GiftSlots" instance=ExtResource( 11 )]
position = Vector2( 487.958, 209 )
gift_path = NodePath("../../Gifts/Gift2")

[node name="GiftSlot3" parent="GiftSlots" instance=ExtResource( 11 )]
position = Vector2( 528.958, 209 )
gift_path = NodePath("../../Gifts/Gift3")

[node name="GiftPlatform" parent="GiftSlots" instance=ExtResource( 11 )]
position = Vector2( 722.958, 203 )
texture = ExtResource( 5 )
offset = Vector2( 0, -22 )
offset = Vector2( 0, -22 )
